--- a/src/user-pages/categoria/categoria.html
+++ b/src/user-pages/categoria/categoria.html
@@ -12,9 +12,11 @@
   <ion-grid>
     <ion-row
       *ngFor="let plato of categoria.platos, let i = index">
+
       <ion-col col-1>
         <ion-checkbox
           [(ngModel)]="platoChecked[i]"
+          checked="platoChecked[i]"
           (ionChange)="updatePlatoChecked(i)"></ion-checkbox>
       </ion-col>
       <ion-col col-7 offset-1>
@@ -25,32 +27,48 @@
       <ion-col col-2>
         {{ plato.price}}€
         <br>
+        <div *ngFor="let number of starIndexArray">
+          <div *ngIf="number < plato.rating">
+            <ion-icon  name="star">
+            </ion-icon>
+          </div>
+          <div *ngIf="number >= plato.rating">
+            <ion-icon  name="star-outline">
+            </ion-icon>
+          </div>
+
+        </div>
+
+
+
         {{ plato.rating}}
         <ion-icon
           name="star"></ion-icon>
       </ion-col>
-      <ion-row *ngIf="platoChecked[i] == true">
-        <form #f="ngForm" (ngSubmit)="onComment(f, i)">
-          <ion-col col-10>
-            <ion-item>
-              <ion-input
-                max="150"
-                placeholder="Quieres comentar algo para el cocinero?.."
-                name="comment"
-                ngModel
-                required></ion-input>
-            </ion-item>
-          </ion-col>
-          <ion-col col-2>
-            <button ion-button
-                    type="submit"
-                    [disabled]="!f.valid"
-                    outline
-                    icon-only><ion-icon name="paper-plane"></ion-icon>
-            </button>
-          </ion-col>
-        </form>
-      </ion-row>
+
+
+    <ion-row *ngIf="platoChecked[i] == true">
+      <form #f="ngForm" (ngSubmit)="onComment(f, i)">
+        <ion-col col-10>
+          <ion-item>
+            <ion-input
+              max="150"
+              placeholder="Quieres comentar algo para el cocinero?.."
+              name="comment"
+              ngModel
+              required></ion-input>
+          </ion-item>
+        </ion-col>
+        <ion-col col-2>
+          <button ion-button
+                  type="submit"
+                  [disabled]="!f.valid"
+                  outline
+                  icon-only><ion-icon name="paper-plane"></ion-icon>
+          </button>
+        </ion-col>
+      </form>
+    </ion-row>
     </ion-row>
   </ion-grid>
 </ion-content>
